--- a/chinese/index.html
+++ b/chinese/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 title: English articles
-navigation: English
+navigation: 中文
 ---
 
 <div class="container">
   <div class="row">
     <div class="col-sm-8 blog-main">
-    {% for post in site.categories.english %}
+    {% for post in site.categories.chinese %}
       <ul>
         <li >
           <a href="{{ post.url }}">{{ post.title }}</a> -
